	* Fix handling of SSL certificates without subjects when using libnss.
	* Fix handling of SSL certificates with timestamps in the distant future
	  when using libnss. (#15586)
	* Impose maximum download size for all HTTP fetches.

	Pidgin:
	* Better handling of URLs longer than 1000 letters.
	* Fix handling of multibyte UTF-8 characters in smiley themes. (#15756)

	Windows-Specific Changes:
	* Fix Tcl scripts. (#15520)
	* Fix crash-on-startup when ASLR is always on. (#15521)
	* Updates to dependencies:
		* NSS 3.15.3 and NSPR 4.10.2

	AIM and ICQ:
	* Fix a possible crash when receiving a malformed message in a Direct IM
	  session.

	Gadu-Gadu:
	* Fix buffer overflow with remote code execution potential. Only
	  triggerable by a Gadu-Gadu server or a man-in-the-middle.
	  (discovered by Yves Younan, Sourcefire VRT) (CVE-2014-NNNN)
	* Disabled buddy list import/export from/to server (it didn't work
	  anymore). Buddy list synchronization will be implemented in 3.0.0.

	IRC:
	* Fix bug where initial IRC status would not be set correctly.
	* Fix bug where IRC wasn't available when libpurple was compiled with
	  Cyrus SASL support. (#15517)

	MXit:
	* Fix buffer overflow with remote code execution potential.
	  (discovered by Sourcefire VRT) (CVE-2014-NNNN)
	* Fix sporadic crashes that can happen after user is disconnected.
	* Fix crash when attempting to add a contact via search results.
	* Show error message if file transfer fails.
	* Fix compiling with InstantBird.
	* Fix display of some custom emoticons.

	SILC:
	* Correctly set whiteboard dimensions in whiteboard sessions.

	SIMPLE:
	* Fix buffer overflow with remote code execution potential.
	  (discovered by Sourcefire VRT) (CVE-2014-NNNN)

	XMPP:
	* Fix possible crash or other erratic behavior when selecting a very
	  small file for your own buddy icon.
	* Fix crash if the user tries to initiate a voice/video session with a
	  resourceless JID.